bcl.com.au (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 2708,
  "classifier_probability": 0.74,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.82,
  "homepage_snapshot_redirected_domain": "bcl.com.au",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070929223757id_/http://www.bcl.com.au/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070929223757id_/http%3A//bcl.com.au",
  "interval": "2007_B",
  "link_text": "PrivacyPolicy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "bcl.com.au",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229045819id_/http%3A//www.bcl.com.au/privacy.htm",
  "policy_title": "BCL - Privacy Policy",
  "policy_url": "bcl.com.au/privacy.htm",
  "sha1": "35f5eba9742bc7b7afd3d8a09d601fe438a51c8a",
  "simhash": 5716783494072753492,
  "simhash_updated": true,
  "site_hostname": "bcl.com.au",
  "site_url": "http://bcl.com.au",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20071229045819",
  "word_count": 471,
  "year": 2007
}

--- a/b/bc/bcl/bcl.com.au.html
+++ b/b/bc/bcl/bcl.com.au.html
@@ -1,49 +1,55 @@
-<!--The following is the downloaded HTML source of the bcl.com.au privacy policy that was archived on 2007-04-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070407144603id_/http%3A//www.bcl.com.au/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bcl.com.au privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229045819id_/http%3A//www.bcl.com.au/privacy.htm) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html dir="ltr" xmlns="http://www.w3.org/1999/xhtml"><!-- #BeginTemplate "bclcomau.dwt" --><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<!-- #BeginEditable "doctitle" -->
 <title>BCL - Privacy Policy</title>
+<!-- #EndEditable -->
+<style type="text/css">
+.style1 {
+	border-style: solid;
+	border-width: 1px;
+}
+</style>
 <link rel="stylesheet" type="text/css" href="bcl.css">
-<base target="_top">
-
-
 </head>
 
-
 <body>
-<table cellpadding="0" cellspacing="0" width="100%" border="0"><tbody><tr valign="top">
-<td><!--webbot bot="Include" U-Include="xxtopleft.htm" TAG="BODY" startspan -->
+<table border="0" width="100%" cellspacing="0" cellpadding="0">
+  <tbody><tr>
+    <td width="50%" valign="top">
 <p><map name="FPMap0_I1">
 <area href="http://www.brisbanecitylife.com.au/bcl/" shape="rect" coords="89, 31, 149, 46" target="_top" alt="Brisbane Qld">
-<area href="http://www.bcl.com.au/adelaide/" shape="rect" coords="149, 31, 202, 46" target="_top" alt="Adelaide SA">
-<area href="http://www.bcl.com.au/perth/" shape="rect" coords="201, 31, 239, 47" target="_top" alt="Perth WA">
-<area href="http://www.bcl.com.au/magazines/" shape="rect" coords="115, 68, 206, 90" target="_top" alt="Magazines">
-<area href="http://www.bcl.com.au/sydney/" shape="rect" coords="74, 47, 128, 65" target="_top" alt="Sydney NSW">
-<area href="http://www.bcl.com.au/melbourne/" shape="rect" coords="131, 48, 195, 66" target="_top" alt="Melbourne Victoria">
-<area href="http://www.bcl.com.au/canberra/" shape="rect" coords="194, 48, 250, 67" target="_top" alt="Canberra ACT">
-<area href="http://www.bcl.com.au/hobart/" shape="rect" coords="252, 47, 295, 66" target="_top" alt="Hobart Tasmania">
-<area href="http://www.bcl.com.au/darwin/" shape="rect" coords="239, 30, 288, 46" target="_top" alt="Darwin NT">
-<area href="http://www.bcl.com.au/business/" shape="rect" coords="27, 69, 113, 91" target="_top" alt="Business">
-<area href="http://www.bcl.com.au/shop/default.htm" shape="rect" coords="209, 70, 299, 90" target="_top" alt="Shopping">
-<area href="http://www.BCL.com.au/" shape="rect" coords="0, 0, 73, 68">
-<area href="http://www.BCL.com.au/" shape="rect" coords="76, 5, 296, 31">
-<area href="http://www.bcl.com.au/aboutbcl.htm" shape="default" target="_top" alt="About BCL Australia">
-
-
+<area href="adelaide/" shape="rect" coords="149, 31, 202, 46" target="_top" alt="Adelaide SA">
+<area href="perth/" shape="rect" coords="201, 31, 239, 47" target="_top" alt="Perth WA">
+<area href="sydney/" shape="rect" coords="74, 47, 128, 65" target="_top" alt="Sydney NSW">
+<area href="melbourne/" shape="rect" coords="131, 48, 195, 66" target="_top" alt="Melbourne Victoria">
+<area href="canberra/" shape="rect" coords="194, 48, 250, 67" target="_top" alt="Canberra ACT">
+<area href="hobart/" shape="rect" coords="252, 47, 295, 66" target="_top" alt="Hobart Tasmania">
+<area href="darwin/" shape="rect" coords="239, 30, 288, 46" target="_top" alt="Darwin NT">
+<area href="business/default.htm" shape="rect" coords="27, 69, 113, 91" target="_top" alt="Business">
+<area href="shop/default.htm" shape="rect" coords="209, 70, 299, 90" target="_top" alt="Shopping">
+<area href="default.htm" shape="rect" coords="76, 5, 296, 31">
+<area href="magazines/default.htm" shape="rect" coords="115, 67, 210, 93" alt="Australian magazines">
+<area href="aboutbcl.htm" shape="default" target="_top" alt="About BCL Australia">
 
 </map>
 <img border="0" src="images/bclaustralia.gif" usemap="#FPMap0_I1" alt="BCL guide to everything Australia." width="300" height="100"></p>
+ </td>
+    <td width="50%" valign="top">
+	 
+<!-- #BeginEditable "bcltopright" -->
+	 
+<h2><img src="lrbut.gif" alt="*" width="20" height="18">     BCL Privacy Policy</h2>
 
-
-<!--webbot bot="Include" endspan i-checksum="54133" -->
+<!-- #EndEditable -->
 </td>
-<td width="50%"><h2><img src="lrbut.gif" alt="*" width="20" height="18">     BCL Privacy Policy</h2>
-</td></tr></tbody></table>
-
-<a name="links"> </a>
-<table cellpadding="10" width="100%" border="0"><tbody><tr valign="top">
-<td width="150"><!--webbot bot="Include" U-Include="xbclmenu.htm" TAG="BODY" startspan -->
-
+  </tr>
+</tbody></table>
+<table border="0" width="100%" cellspacing="0" cellpadding="3">
+  <tbody><tr>
+    <td valign="top" align="left" width="150"> 
 
 
 <script language="JavaScript">
@@ -57,38 +63,26 @@ document.write("<a href='javascript:;'  onclick='ReferThisPagef8662375ff78091b2f
 
 <p>
 
-<b><font color="#FF0000">BCL Australia</font></b><br>
-<a href="hotels.htm" title="Check prices and book hotels, motels, apartments, units, and retreats online">Hotels, Motels...</a>&nbsp;&nbsp;<br>
-<a href="http://www.bcl.com.au/travel/tours.htm" title="Tours around Australia">Tours &amp; Adventure</a>&nbsp;<br>
-<a href="http://www.bcl.com.au/business/carhire.htm" title="Online car hire in Australia and international">Car Hire</a> /
-<a href="http://www.bcl.com.au/sydney/limohire.htm" title="Search for limos and request quotes online">Limos</a>&nbsp;<br>
-<a href="school-holidays.htm" title="Dates for school holidays in each state of Australia">Holiday Dates</a>&nbsp;
+<b><font color="#FF0000">BCL Australia</font></b><br><a href="hotels.htm" title="Check prices and book hotels, motels, apartments, units, and retreats online">Hotels, Motels...</a>&nbsp;&nbsp;<br><a href="travel/tours.htm" title="Tours around Australia">Tours &amp; Adventure</a>&nbsp;<br><a href="business/carhire.htm" title="Online car hire in Australia and international">Car Hire</a> /
+<a href="sydney/limohire.htm" title="Search for limos and request quotes online">Limos</a>&nbsp;<br><a href="school-holidays.htm" title="Dates for school holidays in each state of Australia">Holiday Dates</a>&nbsp;
 </p><hr>
 
 
-<a href="http://www.bcl.com.au/business/" title="Links, products and services for doing business in Australia">BCL Business</a>&nbsp;<br>
-<a href="http://www.bcl.com.au/business/realestate.htm" title="Property Listings for sale, rent and share Australia-wide">BCL Real Estate</a>&nbsp;<br>
-<a href="employment.htm">BCL Employment</a><br>
-<a href="businessforsale.htm">Businesses For Sale</a>
+<a href="business/default.htm" title="Links, products and services for doing business in Australia">BCL Business</a>&nbsp;<br><a href="business/realestate.htm" title="Property Listings for sale, rent and share Australia-wide">BCL Real Estate</a>&nbsp;<br>
+<a href="business/serviced-offices.htm">BCL Serviced Offices</a><br><a href="employment.htm">BCL Employment</a>
 <hr>
 
-<a href="shop/default.htm" title="Guide to quality Australian online retailers">BCL Shopping&nbsp;</a><br>
-
-<a href="http://www.bcl.com.au/magazines/" title="Subscribe to Australian magazines online">BCL Magazines</a><br>
-<a href="http://www.bcl.com.au/travel/default.htm">BCL Travel</a>
+<a href="shop/default.htm" title="Guide to quality Australian online retailers">BCL Shopping</a><br>
+<a href="magazines/default.htm" title="Subscribe to Australian magazines online">BCL Magazines</a><br><a href="travel/default.htm">BCL Travel</a>
 <hr>
 
-<a href="movetoaustralia/default.htm" title="Information about immigration, work permits, immigration agents and living in Australia">Moving to Australia</a><br>
-<a href="studyabroad.htm" title="Study English in Australia">Study in Australia</a>
-&nbsp;<br>
-<a href="news.htm">News / Current Affairs</a>
+<a href="movetoaustralia/default.htm" title="Information about immigration, work permits, immigration agents and living in Australia">Moving to Australia</a><br><a href="studyabroad.htm" title="Study English in Australia">Study in Australia</a>
+&nbsp;<br><a href="news.htm">News / Current Affairs</a>
 <hr>
-<a href="reunions.htm" title="School, Club and Workplace Reunions">Reunions</a><br>
-<a href="personals.htm" title="Australian matchmaking sites">Personals</a><br>
+<a href="reunions.htm" title="School, Club and Workplace Reunions">Reunions</a><br><a href="personals.htm" title="Australian matchmaking sites">Personals</a><br>
 
 
-
-<a href="http://www.bcl.com.au/subscribe.htm" title="Subscribe to our free monthly email newsletter">Free Newsletter</a>
+<a href="subscribe.htm" title="Subscribe to our free monthly email newsletter">Free Newsletters</a>
 
 
 
@@ -98,16 +92,7 @@ document.write("<a href='javascript:;'  onclick='ReferThisPagef8662375ff78091b2f
 
 
 
-<font color="#ff0000"><b> BCL city sites</b></font><br>
-<a href="http://www.bcl.com.au/adelaide/" title="Guide to Adelaide and South Australia">Adelaide SA</a>&nbsp;<br>
-<a href="http://www.brisbanecitylife.com.au/bcl/" title="Guide to Brisbane and Queensland">Brisbane Qld</a>&nbsp;<br>
-<a href="http://www.bcl.com.au/northqueensland/" title="Guide to Cairns and Tropical North Queensland">Cairns N Qld</a><br>
-<a href="http://www.bcl.com.au/canberra/" title="Guide to Canberra, Australia Capital Territory">Canberra ACT</a><br>
-<a href="http://www.bcl.com.au/darwin/" title="Guide to Darwin, Alice Spring, Ayers Rock, Northern Territory">Darwin NT</a><br>
-<a href="http://www.bcl.com.au/hobart/" title="Guide to Hobart and Tasmania">Hobart Tasmania</a><br>
-<a href="http://www.bcl.com.au/melbourne/" title="Guide to Melbourne and Victoria">Melbourne Vic</a><br>
-<a href="http://www.bcl.com.au/perth/" title="Guide to Perth and Western Australia">Perth WA</a>&nbsp;<br>
-<a href="http://www.bcl.com.au/sydney/" title="Guide to Sydney and New South Wales">Sydney NSW</a>
+<font color="#ff0000"><b> BCL city sites</b></font><br><a href="http://www.bcl.com.au/adelaide/" title="Guide to Adelaide and South Australia">Adelaide SA</a>&nbsp;<br><a href="http://www.brisbanecitylife.com.au/bcl/" title="Guide to Brisbane and Queensland">Brisbane Qld</a>&nbsp;<br><a href="http://www.bcl.com.au/northqueensland/" title="Guide to Cairns and Tropical North Queensland">Cairns N Qld</a><br><a href="http://www.bcl.com.au/canberra/" title="Guide to Canberra, Australia Capital Territory">Canberra ACT</a><br><a href="http://www.bcl.com.au/darwin/" title="Guide to Darwin, Alice Spring, Ayers Rock, Northern Territory">Darwin NT</a><br><a href="http://www.bcl.com.au/hobart/" title="Guide to Hobart and Tasmania">Hobart Tasmania</a><br><a href="http://www.bcl.com.au/melbourne/" title="Guide to Melbourne and Victoria">Melbourne Vic</a><br><a href="http://www.bcl.com.au/perth/" title="Guide to Perth and Western Australia">Perth WA</a>&nbsp;<br><a href="http://www.bcl.com.au/sydney/" title="Guide to Sydney and New South Wales">Sydney NSW</a>
  
 
 
@@ -115,11 +100,7 @@ document.write("<a href='javascript:;'  onclick='ReferThisPagef8662375ff78091b2f
 
 
 
-&nbsp;<br>
-&nbsp;<br>
-<a href="http://www.bcl.com.au/goldcoast/" title="Guide to the Gold Coast, Surfers Paradise, Queensland/NSW border">Gold Coast</a>&nbsp;<br>
-<a href="http://www.bcl.com.au/sunshine-coast/" title="Guide to the Sunshine Coast, Noosa, Mooloolaba etc Queensland">Sunshine Coast</a><br>
-<a href="http://www.bcl.com.au/northqueensland/">North Qld</a>
+&nbsp;<br>&nbsp;<br><a href="http://www.bcl.com.au/goldcoast/" title="Guide to the Gold Coast, Surfers Paradise, Queensland/NSW border">Gold Coast</a>&nbsp;<br><a href="http://www.bcl.com.au/sunshine-coast/" title="Guide to the Sunshine Coast, Noosa, Mooloolaba etc Queensland">Sunshine Coast</a><br><a href="http://www.bcl.com.au/northqueensland/">North Qld</a>
  
 
 
@@ -127,8 +108,7 @@ document.write("<a href='javascript:;'  onclick='ReferThisPagef8662375ff78091b2f
 
 
 
-&nbsp;<br>
-<a href="australia.htm">More AU cities</a>
+&nbsp;<br><a href="australia.htm">Regional Australia</a>
  
 
 
@@ -138,18 +118,15 @@ document.write("<a href='javascript:;'  onclick='ReferThisPagef8662375ff78091b2f
 
 
 
-<a href="advertising.htm">Advertising</a> <br>
-<a href="feedback.htm">Feedback</a><hr>
+<a href="advertising.htm">Advertising</a> <br><a href="feedback.htm">Feedback</a><hr>
 <form action="http://search.freefind.com/find.html" method="GET" target="_self">
 <font size="1" face="arial,helvetica">
 <input type="HIDDEN" name="id" value="29296639">
 <input type="HIDDEN" name="pageid" value="r">
 <input type="HIDDEN" name="mode" value="ALL">
 <input type="HIDDEN" name="n" value="0"></font><b><font color="#FF0000">Search:</font></b><br>
-<input name="query" size="20"><br>
-&nbsp;in site:<font size="1" face="arial,helvetica">
-<br>
-<small> 
+<input name="query" size="20"><br>&nbsp;in site:<font size="1" face="arial,helvetica">
+<br><small> 
 <select name="s">
 <option value="" selected="">All BCL</option>
 <option value="shop">BCL Shopping</option>
@@ -169,8 +146,7 @@ document.write("<a href='javascript:;'  onclick='ReferThisPagef8662375ff78091b2f
 <option value="hotels">AU Hotels</option>
 
 </select>
-<br>
-<input type="SUBMIT" value=" Search BCL">
+<br><input type="SUBMIT" value=" Search BCL">
  &nbsp;
 </small></font>
 </form>
@@ -178,12 +154,12 @@ document.write("<a href='javascript:;'  onclick='ReferThisPagef8662375ff78091b2f
 <hr>
  
 
+ 
 
-<!--webbot bot="Include" endspan i-checksum="34055" -->
+<p></p>
 
-</td>
-
-<td width="70%">
+    </td>
+    <td valign="top" align="left"> <!-- #BeginEditable "content" -->
 <h2><img src="lrbut.gif" alt="*" width="20" height="18">        Privacy Laws</h2>
 <p>For information on Australian Privacy laws, see <a href="http://www.privacy.gov.au">www.privacy.gov.au</a>&nbsp;</p>
 <h2><img src="lrbut.gif" alt="*" width="20" height="18"> BCL - Web Site Cookies and Statistics</h2>
@@ -224,34 +200,34 @@ to avoid passing information on with many other newsletters.</p>
 <h2> 
 <img src="lrbut.gif" width="20" height="18">Questions</h2>
           <p>Please <a href="contact.htm">contact the editor</a> if you have any concerns about how we use your personal details.</p>
-</td><td width="150">&nbsp;</td>
-</tr></tbody></table>
+   <!-- #EndEditable --> </td>
+    <td width="200" valign="top" align="left">
+    <!-- #BeginEditable "dispads" -->
+    <!-- #EndEditable -->
+    </td>
+  </tr>
+</tbody></table>
 
 <hr>
-<!--webbot bot="Include" U-Include="xbclfooter.htm" TAG="BODY" startspan -->
+
 <table cellpadding="5" border="0" width="100%">
 <tbody><tr valign="TOP">
 
 <td width="100%">
  <a href="http://www.bcl.com.au">www.BCL.com.au</a>&nbsp;is managed by <a href="http://www.onlineencounters.com.au/">Online
-Encounters Pty Ltd</a> ACN 114919158<br>
-<a href="http://www.bcl.com.au/disclaimer.htm">Disclaimer</a> | <a href="http://www.bcl.com.au/privacy.htm">Privacy
-Policy</a> | <a href="http://www.bcl.com.au/spam.htm">Spam Policy</a> | <a href="http://www.bcl.com.au/advertising.htm">Advertising</a>
-| <a href="http://www.bcl.com.au/contact.htm">Contact</a> | <a href="media.htm">Media
- Info</a> | <a href="http://www.bcl.com.au/subscribe.htm">Newsletters</a> | Copyright © 1995 -
+Encounters Pty Ltd</a> ACN 114919158<br><a href="disclaimer.htm">Disclaimer</a> | <a href="http://www.bcl.com.au/privacy.htm">Privacy
+Policy</a> | <a href="spam.htm">Spam Policy</a> | <a href="advertising.htm">Advertising</a>
+| <a href="contact.htm">Contact</a> | <a href="media.htm">Media
+ Info</a> | <a href="subscribe.htm">Newsletters</a> | Copyright © 1995 -
  2007</td>
 
 </tr>
 </tbody></table>
-<!--webbot bot="Include" endspan i-checksum="16756" -->
+<!-- #BeginEditable "foot " -->
+<!-- #EndEditable -->
 
 
-
-
-
-
-
-
+<!-- #EndTemplate -->
 
 
 </body></html>
