--- a/p/pp/ppi/ppi2pass.com.html
+++ b/p/pp/ppi/ppi2pass.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ppi2pass.com privacy policy that was archived on 2007-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070615000613id_/http%3A//ppi2pass.com/ppi/PPIInfo_pg_priv.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ppi2pass.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229045826id_/http%3A//ppi2pass.com/ppi/PPIInfo_pg_priv.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>
 </title>
@@ -98,9 +98,15 @@ function popwin( URL )
 			  	<td valign="top" align="right">
 				  <table border="0" cellpadding="0" cellspacing="0"><tbody><tr>
 				   <td><img src="/img/home/topNavTrim.gif" width="18" height="22" border="0"></td>
-				   
+				   <td><table cellpadding="0" cellspacing="0" border="0">
+<tbody><tr>
+<td background="/img/home/secButtonLeft.gif" width="7" height="22" onclick="window.location='PPIHome'"></td>
+<td class="topNavButton" background="/img/home/secButtonBG.gif" height="22" onclick="window.location='PPIHome'" onmouseover="this.className='topNavButtonOver';" onmouseout="this.className='topNavButton';">My Home Page</td>
+<td background="/img/home/secButtonRight.gif" width="7" height="22" onclick="window.location='PPIHome'"></td>
+</tr>
+</tbody></table></td>
 				     
-				   <td class="topNavButton" width="122" height="22" background="/img/topNavButton_review.gif" onclick="window.location='PPIInfo_pg_pereview-index.html'" onmouseover="this.className='topNavButtonOver';" onmouseout="this.className='topNavButton';">Review Courses</td>
+				   <td class="topNavButton" width="132" height="22" background="/img/topNavButton_review.gif" onclick="window.location='PPIInfo_pg_pereview-index.html'" onmouseover="this.className='topNavButtonOver';" onmouseout="this.className='topNavButton';">PPI Review Courses</td>
 				   <td class="topNavButton" width="85" height="22" background="/img/home/topNavButton.gif" onclick="window.location='PPIShop'" onmouseover="this.className='topNavButtonOver';" onmouseout="this.className='topNavButton';">Products</td>
 				   <td class="topNavButton" width="85" height="22" background="/img/home/topNavButton.gif" onclick="window.location='PPIInfo_pg_forums.html'" onmouseover="this.className='topNavButtonOver';" onmouseout="this.className='topNavButton';">Forums</td>
 					<td width="53" height="22" bgcolor="#BED9E6"></td>
@@ -155,7 +161,7 @@ function popwin( URL )
   may ask you to register electronically. When you do, we may merge your registration 
   information with any other information you've already left with us. If you ever 
   want to review or update that information, please contact Professional Publications's 
-  <a href="mailto:marketing@ppi2pass.com">Marketing Department.</a> If you haven't 
+  <a href="mailto:info@ppi2pass.com">Customer Care Department.</a> If you haven't 
   already given us your e-mail address, we will ask you to do so. This ensures 
   that only you can access your information. </p>
 <p> Professional Publications occasionally shares Personal Information with an 
@@ -175,7 +181,7 @@ function popwin( URL )
   policies and procedures to protect your data from loss, misuse, unauthorized 
   access or disclosure, alteration, or destruction. </p>
 <p> <b>Enforcement:</b> If for some reason you believe Professional Publications 
-  has not adhered to the principles described herein, please notify us by <a href="mailto:marketing@ppi2pass.com">email</a>, 
+  has not adhered to the principles described herein, please notify us by <a href="mailto:info@ppi2pass.com">email</a>, 
   and we will do our best to determine and correct any problem promptly. </p>
 <p> <b>Cookies:</b> In some cases, part of your Personal Information may be sent 
   back to and stored on your computer in the form of a cookie. The cookie contains 
@@ -223,7 +229,11 @@ function popwin( URL )
 <a href="PPIInfo_pg_contact.html" class="bottomMenu">Contact Us</a> |
 <a href="PPIInfo_pg_priv.html" class="bottomMenu">Privacy Policy</a> |
 <a href="PPIInfo_pg_sitemap.html" class="bottomMenu">Site Map</a><br>
-<span class="copyright">©  2007 Professional Publications Inc.</span>
+<span class="copyright">©  2007 Professional Publications Inc.</span><br>
+<span class="copyright">Exam names, organization names, and other trademarks are the 
+intellectual property of the respective trademark holders.<br>
+These trademark holders are not affiliated with PPI and did not participate in the 
+development, publication, and/or administration of PPI products, courses, and services.</span>
 </td>
 </tr>
 </tbody></table>
