csharpfriends.com (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 9260,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.21,
  "homepage_snapshot_redirected_domain": "csharpfriends.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001184142id_/http://www.csharpfriends.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001184142id_/http%3A//csharpfriends.com",
  "interval": "2007_B",
  "link_text": "Privacy Notice",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "csharpfriends.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229054454id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx",
  "policy_title": "C# C Sharp and Tutorials on C# Friends.com",
  "policy_url": "csharpfriends.com/Members/Main/Misc/private.aspx",
  "sha1": "012c02e2ce614545ffe30c62dd19e6ee7b9274f2",
  "simhash": 16885089335442479612,
  "simhash_updated": false,
  "site_hostname": "csharpfriends.com",
  "site_url": "http://csharpfriends.com",
  "smog": 16.32,
  "strict_updated": true,
  "timestamp": "20071229054454",
  "word_count": 1498,
  "year": 2007
}

--- a/c/cs/csh/csharpfriends.com.html
+++ b/c/cs/csh/csharpfriends.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the csharpfriends.com privacy policy that was archived on 2007-04-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070409031418id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the csharpfriends.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229054454id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx) for the most accurate reproduction.-->
 
 <html><head></head><body bgcolor="#FFFFFF" link="#003399" alink="#FF9933" vlink="#996633" text="#000000" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0"><span id="header1">
 
@@ -77,7 +77,7 @@ document.write('<iframe name="IdealAdServer_frame" width="468" height="60" frame
  
 
 // --> 
-									</script><iframe name="IdealAdServer_frame" width="468" height="60" frameborder="0" src="http://www.csharpfriends.com/IdealAdServer/IdealAdServer.aspx?pid=2&amp;zid=7&amp;a=1&amp;ocp=https://web.archive.org/web/20070409031418id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx&amp;1580454735698" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"></iframe>
+									</script><iframe name="IdealAdServer_frame" width="468" height="60" frameborder="0" src="http://www.csharpfriends.com/IdealAdServer/IdealAdServer.aspx?pid=2&amp;zid=7&amp;a=1&amp;ocp=https://web.archive.org/web/20071229054454id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx&amp;1580454736296" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"></iframe>
 								</td>
 							</tr>
 						</tbody></table>
@@ -312,7 +312,7 @@ document.write('<iframe name="IdealAdServer_frame" width="120" height="600" fram
  
 
 // --> 
-							</script><iframe name="IdealAdServer_frame" width="120" height="600" frameborder="0" src="http://www.csharpfriends.com/IdealAdServer/IdealAdServer.aspx?pid=2&amp;zid=6&amp;a=1&amp;ocp=https://web.archive.org/web/20070409031418id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx&amp;1580454735719" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"></iframe>
+							</script><iframe name="IdealAdServer_frame" width="120" height="600" frameborder="0" src="http://www.csharpfriends.com/IdealAdServer/IdealAdServer.aspx?pid=2&amp;zid=6&amp;a=1&amp;ocp=https://web.archive.org/web/20071229054454id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx&amp;1580454736528" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"></iframe>
 							
 						</p>
 						<br>						
@@ -324,10 +324,6 @@ document.write('<iframe name="IdealAdServer_frame" width="120" height="600" fram
 						<br>
 						<font face="arial" color="black" size="-2"><a href="http://www.codereference.com">code reference</a></font>
 						<br>
-						<font face="arial" color="black" size="-2"><a href="http://www.developersdex.com/asp">asp 
-								help example code</a></font>
-						<br>
-						<font face="arial" color="black" size="-2"><a href="http://www.dotnetspider.com" title="Offshore software development and C# tutorials" target="_blank">Offshore development</a></font>
 					</td>
 <!-- /sarr -->
 <td><!-- content -->
@@ -529,7 +525,7 @@ document.write('<iframe name="IdealAdServer_frame" width="125" height="125" fram
  
 
 // --> 
-</script><iframe name="IdealAdServer_frame" width="125" height="125" frameborder="0" src="http://www.csharpfriends.com/IdealAdServer/IdealAdServer.aspx?pid=2&amp;zid=3&amp;a=1&amp;ocp=https://web.archive.org/web/20070409031418id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx&amp;1580454735721" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"></iframe>
+</script><iframe name="IdealAdServer_frame" width="125" height="125" frameborder="0" src="http://www.csharpfriends.com/IdealAdServer/IdealAdServer.aspx?pid=2&amp;zid=3&amp;a=1&amp;ocp=https://web.archive.org/web/20071229054454id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx&amp;1580454736627" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"></iframe>
 </p>
 <!--  Ad Serving by - http://www.idealadserver.com  --><script language="JavaScript" type="text/javascript">
 <!--
@@ -542,7 +538,7 @@ document.write('<iframe name="IdealAdServer_frame" width="125" height="125" fram
  
 
 // --> 
-</script><iframe name="IdealAdServer_frame" width="125" height="125" frameborder="0" src="http://www.csharpfriends.com/IdealAdServer/IdealAdServer.aspx?pid=2&amp;zid=8&amp;a=1&amp;ocp=https://web.archive.org/web/20070409031418id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx&amp;1580454735723" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"></iframe>
+</script><iframe name="IdealAdServer_frame" width="125" height="125" frameborder="0" src="http://www.csharpfriends.com/IdealAdServer/IdealAdServer.aspx?pid=2&amp;zid=8&amp;a=1&amp;ocp=https://web.archive.org/web/20071229054454id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx&amp;1580454736644" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"></iframe>
 
 <br>
 				<br clear="all">
@@ -601,7 +597,7 @@ document.write('<iframe name="IdealAdServer_frame" width="125" height="125" fram
  
 
 // --> 
-</script><iframe name="IdealAdServer_frame" width="125" height="125" frameborder="0" src="http://www.csharpfriends.com/IdealAdServer/IdealAdServer.aspx?pid=2&amp;zid=8&amp;a=1&amp;ocp=https://web.archive.org/web/20070409031418id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx&amp;1580454735752" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"></iframe>
+</script><iframe name="IdealAdServer_frame" width="125" height="125" frameborder="0" src="http://www.csharpfriends.com/IdealAdServer/IdealAdServer.aspx?pid=2&amp;zid=8&amp;a=1&amp;ocp=https://web.archive.org/web/20071229054454id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx&amp;1580454736814" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"></iframe>
 
 				<br>
 				<br clear="all">
@@ -662,7 +658,7 @@ document.write('<iframe name="IdealAdServer_frame" width="125" height="125" fram
 											<br>
 											<a href="http://www.csharpfriends.com/dotnet/top/free/PeoplePc/people-pc.aspx">People Pc</a>
 											<br>
-											<a href="http://www.csharpfriends.com/dotnet/">asp.net</a>&nbsp;<a href="http://www.microsoft.com">microsoft.com</a>
+											<a href="http://www.microsoft.com">microsoft.com</a>
 											<br>											
 											<a href="http://www.webhostingfriends.com">web hosting directory</a>											
 											<br>
@@ -684,22 +680,6 @@ document.write('<iframe name="IdealAdServer_frame" width="125" height="125" fram
 				</tbody></table>
 				<!-- /great offers links -->
 				<br>
-				<!-- csharpfriends partners -->
-				<table bgcolor="#FDFFCA" border="0" cellspacing="0" width="125" style="border: 1px dashed #7755AA; background-color: #ecf8ff;" align="center">
-					<tbody><tr>
-						<td align="center">
-							<table border="0" cellpadding="3" cellspacing="0" width="125">
-								<tbody><tr>
-									<td class="ch" bgcolor="#FDFFCA" nowrap=""><font color="#ce0000" face="arial" size="-1">Partners</font><br>
-										<font face="arial" color="black" size="-2"><a href="http://www.wimdows.net">Wimdows.net</a><br>
-											
-									</font></td>
-								</tr>
-							</tbody></table>
-						</td>
-					</tr>
-				</tbody></table>
-				<!-- /csharpfriends partners -->
 			</td>
 		</tr>
 	</tbody></table>
@@ -720,7 +700,7 @@ document.write('<iframe name="IdealAdServer_frame" width="468" height="60" frame
  
 
 // --> 
-</script><iframe name="IdealAdServer_frame" width="468" height="60" frameborder="0" src="http://www.csharpfriends.com/IdealAdServer/IdealAdServer.aspx?pid=2&amp;zid=7&amp;a=1&amp;ocp=https://web.archive.org/web/20070409031418id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx&amp;1580454735774" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"></iframe>
+</script><iframe name="IdealAdServer_frame" width="468" height="60" frameborder="0" src="http://www.csharpfriends.com/IdealAdServer/IdealAdServer.aspx?pid=2&amp;zid=7&amp;a=1&amp;ocp=https://web.archive.org/web/20071229054454id_/http%3A//www.csharpfriends.com/Members/Main/Misc/private.aspx&amp;1580454736905" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no"></iframe>
 </td>
 		
 	</tr>
