--- a/g/gr/gre/greatdaygames.com.html
+++ b/g/gr/gre/greatdaygames.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the greatdaygames.com privacy policy that was archived on 2007-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070616105647id_/http%3A//www.greatdaygames.com/help/privacypolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the greatdaygames.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229065517id_/http%3A//www.greatdaygames.com/help/privacypolicy.aspx) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy - Play Free Online Games on Great Day Games</title>
@@ -41,12 +41,12 @@
 	<td valign="top">
 		<table cellpadding="1" cellspacing="1" width="100%">
 		<tbody><tr><td colspan="2" height="4"></td></tr>
-		<tr><td colspan="2" align="right"><img src="../img/header/links.gif" width="391" height="15" usemap="#linksMap"></td></tr>
+		<tr><td colspan="2" align="right"><img src="../img/header/links.gif" width="391" height="15" usemap="#LinksMap" alt="Make GDG Your Home Page, Add GDG To Your Site, Tell A Friend"></td></tr>
 		<tr>
 			<td width="40"></td>
 			<td align="right">
 				<table cellspacing="0" cellpadding="0"><tbody><tr>
-					<td><img src="../img/header/menu_left.gif" usemap="#MenuMap"></td>
+					<td><img src="../img/header/menu_left.gif" usemap="#MenuMap" alt="Menu: Games, Profiles, Treats, Forums"></td>
 					<td>
 <table id="oPageHeader_panelLogin" align="Right" cellpadding="0" cellspacing="0" border="0" width="100%"><tbody><tr><td align="Right">
 		
@@ -98,8 +98,8 @@
 		</td></tr></tbody></table>
 			</td>
 			<td width="5"></td>
-			<td valign="top"><a href="../login/register.aspx" target="_parent"><img src="../img/header/btn_register.gif" width="83" height="22"></a></td>
-			<td valign="top"><input type="image" src="../img/header/btn_login.gif" width="56" height="22"></td></tr></tbody></table>
+			<td valign="top"><a href="../login/register.aspx" target="_parent"><img src="../img/header/btn_register.gif" alt="Register Account on Great Day Games" width="83" height="22"></a></td>
+			<td valign="top"><input type="image" src="../img/header/btn_login.gif" alt="Log In to Great Day Games" width="56" height="22"></td></tr></tbody></table>
 	</td></tr></tbody></table></td>
 			</tr></tbody></table>
 		</td></tr>
@@ -122,9 +122,9 @@
 <area href="../community/forum.aspx" alt="Forums" shape="RECT" coords="215,4,288,30" target="_parent">
 </map>
 <map name="LinksMap">
-<area onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('http://www.greatdaygames.com');" shape="RECT" target="_parent" alt="AS HOME PAGE" coords="5,0,170,20" href="javascript:void(0)">
-<area shape="RECT" target="_parent" alt="ADD GDG TO YOUR SITE" coords="175,0,304,20" href="../spread/tell_friend.aspx#add">
-<area shape="RECT" target="_parent" alt="TELL A FRIEND" coords="308,0,395,20" href="../spread/tell_friend.aspx">
+<area href="javascript:void(0)" alt="Make GDG Your Home Page" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('http://www.greatdaygames.com');" shape="RECT" target="_parent" coords="5,0,170,20">
+<area href="../spread/tell_friend.aspx#add" alt="Add GDG To Your Site" shape="RECT" target="_parent" coords="175,0,304,20">
+<area href="../spread/tell_friend.aspx" alt="Tell A Friend" shape="RECT" target="_parent" coords="308,0,395,20">
 </map>
 
 </td></tr></tbody></table>
@@ -326,16 +326,18 @@ function ShowNews(url){
 		<tbody><tr><td><table id="PageFooter_panelTopRightSideAd" cellpadding="0" cellspacing="0" border="0" width="100%"><tbody><tr><td>
 		
 <table cellpadding="0" cellspacing="0">
-<tbody><tr><td class="borderAdBG" align="center"><img src="../img/ad.gif" width="160" height="11"></td></tr>
-<tr><td>
+</table><table id="PageFooter_oRightSideAd_panelTitle" cellpadding="0" cellspacing="0" border="0" width="100%"><tbody><tr><td>
+			</td></tr><tr><td class="borderAdBG" align="center"><img src="../img/ad.gif" width="160" height="11"></td></tr>
+		</tbody></table>
+</td></tr><tr><td>
 <iframe border="0" frameborder="0" scrolling="no" width="160" height="600" src="http://www.greatdaygames.com/ads/showrightsidead.aspx?AdsID=2"></iframe>
 </td></tr>
 </tbody></table>
 	</td></tr></tbody></table></td></tr>
-		<tr><td height="20"></td></tr>
+		<tr><td height="10"></td></tr>
 		<tr><td></td></tr>
 	</tbody></table>
-</td></tr>
+</div></td></tr>
 </tbody></table>
 </div>
 <div>
@@ -357,7 +359,7 @@ google_color_text = "000000";
 <tr><td height="5" colspan="2"></td></tr></tbody></table>
 </div>
 
-</td></tr></tbody></table>
+
 <div><table width="780"><tbody><tr><td align="center">
 <table>
 <tbody><tr><td align="center"><table cellpadding="0" cellspacing="0"><tbody><tr>
@@ -368,7 +370,7 @@ google_color_text = "000000";
 <td width="15"></td><td><a class="privacy" id="feedback" name="feedback" href="mailto:feedback@greatdaygames.com">Email: feedback at greatdaygames.com</a></td>
 <td width="15"></td><td><a class="privacy" id="advertise" name="advertise" href="mailto:advertise@greatdaygames.com">Advertise With Us</a></td></tr></tbody></table>
 </td></tr>
-<tr><td align="center">© 2007 <a class="privacy" href="http://www.arkadium.com">Arkadium, Inc.</a></td></tr></tbody></table>
+<tr><td align="center">© 2007 <a class="privacy" href="http://www.arkadium.com">Arkadium, Inc. - Custom Game Development, Advergaming, Advergames Developer</a></td></tr></tbody></table>
 <script>document.getElementById("feedback").href = "ma"+"ilto"+":feedb"+"ack@"+"greatdayg"+"ames.com";</script>
 <script>document.getElementById("advertise").href = "ma"+"ilto"+":advert"+"ise@"+"greatdayg"+"ames.com";</script>
 
@@ -377,7 +379,7 @@ google_color_text = "000000";
 _uacct = "UA-417582-1";
 urchinTracker();
 </script></td></tr></tbody></table></div>
-</div>
+
 <script language="JavaScript">var tcdacmd="dt";</script>
 <script src="http://an.tacoda.net/an/12634/slf.js" language="JavaScript"></script>		
 
