--- a/i/in/int/internetworld.co.uk.html
+++ b/i/in/int/internetworld.co.uk.html
@@ -1,18 +1,20 @@
-<!--The following is the downloaded HTML source of the internetworld.co.uk privacy policy that was archived on 2007-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070629233926id_/http%3A//www.internetworld.co.uk/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the internetworld.co.uk privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229072728id_/http%3A//www.internetworld.co.uk/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="EN"><head>
-<title>Privacy policy</title>
+<title>
+Privacy policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="robots" content="index,follow">
 <meta name="description" content="Internet World 2007 – The business event for the Internet and Online Marketing. Visit Internet World and you can learn from industry experts and meet the leading suppliers.">
 <meta name="keywords" content="Digital marketing event, Online marketing event, Online advertising event, online marketing exhibition, Online marketing show, Digital marketing exhibition, Online advertising exhibition, Digital marketing conference, Online marketing conference, Online Advertising conference, learn about online marketing, Internet Exhibition, Internet conference">
-<meta name="Author" content="dmanvell">
-<meta name="LastUpdated" content="07/03/2007 10:04:51">
-<meta name="Sitekit_Version" content=" 7.14.0 ">
-<meta name="Sitekit_siteid" content=" 2173 2284 ">
-<meta name="Sitekit_locid" content=" 0at00c ">
-<meta name="Server" content="THWWW09">
+<meta name="Author" content="Mark Ram">
+<meta name="LastUpdated" content="04/07/2007 14:11:59">
+<meta name="Sitekit_Version" content="8.3.0">
+<meta name="Sitekit_siteid" content="2173">
+<meta name="Sitekit_SiteOwner_siteid" content="2284">
+<meta name="Sitekit_locid" content="0at00c">
+<meta name="Server" content="THWWW08">
 <link rel="StyleSheet" href="/welcomeStyle.aspx.ctid-2011.css" type="text/css">
 <link type="application/rss+xml" rel="alternate" title="Internet World News" href="http://www.internetworld.co.uk/RSS.aspx?ID=1235">
 <script type="text/javascript">
@@ -27,8 +29,6 @@ Image1.src = "top-bg.gif"
 _uacct = "UA-269434-6";
 urchinTracker();
 </script>
-
-
 </head>
 <body>
 <div id="wrap">
@@ -36,7 +36,7 @@ urchinTracker();
 
     <div id="top">
       <div class="logo"><a href="../"><img src="/GetImage.aspx.id-83157.gif" alt="logo: Internet World - business for the digital age" width="214" height="82"></a></div>
-      <div class="date"><span class="grey12pxbold">30 June 2007</span>
+      <div class="date"><span class="grey12pxbold">29 December 2007</span>
         <div class="breadcrumb"><span class="grey11px"><table cellpadding="0" cellspacing="0" summary="This table contains a breadcrumb trial, showing your position in the site"><tbody><tr><td class="CRUMB"><a class="CRUMB" href="/">Home</a></td><td class="CRUMB">/</td><td class="CRUMB">Privacy policy&nbsp;</td></tr></tbody></table>
  
 </span></div>
@@ -62,11 +62,16 @@ urchinTracker();
       </div>
       <div class="LeftBoxBtm"> </div>
      <variableblock><!--newsletter--></variableblock>                             
-<!-- PLATINUM SPONSOR START --> 
+<!-- SHOW SPONSOR START --> 
       <div class="leftsub">
-        <div class="leftsubdots"> <span class="grey_serif_16px">Platinum Sponsor </span> </div>
-        <a href="event-sponsors-2008.html"><img src="http://secure.sitekit.net/GetImage.aspx?id=93194" width="100" height="58" border="0"></a></div>  
-<!-- PLATINUM SPONSOR ENDS -->    
+        <div class="leftsubdots"> <span class="grey_serif_16px">Show Sponsor </span> </div>
+        <img src="/images/royal-mail.gif" width="90" height="60" border="0" alt="Royal Mail"></div>  
+<!-- SHOW SPONSOR ENDS -->
+<!-- PLATINUM SPONSORS START --> 
+      <div class="leftsub">
+        <div class="leftsubdots"> <span class="grey_serif_16px">Platinum Sponsors </span> </div>
+        <a href="event-sponsors-2008.html"><img src="http://secure.sitekit.net/GetImage.aspx?id=93194" width="100" height="58" border="0"><br><img src="/GetImage.aspx?id=83982" border="0" alt="Interxion logo"></a></div>  
+<!-- PLATINUM SPONSORS ENDS -->    
 <!-- GOLD SPONSOR START -->
       <div class="leftsub">
         <div class="leftsubdots"> <span class="grey_serif_16px">Gold Sponsor </span> </div>
@@ -84,9 +89,11 @@ urchinTracker();
       <div class="leftsub">
         <div class="leftsubdots"> <span class="grey_serif_16px">Running Alongside </span> </div>
          <a href="idmf.html"><img src="images/iw-idmf.gif" width="90" height="34" border="0" alt="IDMF"></a></div>
+<!-- BLOG ENTRY STARTS --><!-- hide for now: 041207
         <div class="leftsub">
         <div class="leftsubdots"> <span class="grey_serif_16px">Internet World Blog </span> </div>
-         <a href="http://www.internetworld.co.uk/blog"><img src="images/blog.gif" width="100" height="78" border="0" alt="Internet World Blog"></a></div>
+         <a href="http://www.internetworld.co.uk/blog"><img src="images/blog.gif" width="100" height="78" border="0" alt="Internet World Blog"></a></div>-->
+<!-- BLOG ENTRY END -->
     </div>
 
 
@@ -99,7 +106,7 @@ urchinTracker();
 <p><strong>Email Communications<br></strong>We send all newly registered users a welcome email to verify username and password. Established users will occasionally receive and update on new content and developments around <a href="http://www.internetworld.co.uk">www.internetworld.co.uk</a>. You have the option to not receive these communications either by clicking a link in the email communication or by sending an email to <a href="mailto:kevin.oreilly@ithacamedia.co.uk">kevin.oreilly@ithacamedia.co.uk</a>&nbsp;</p>
 <p><strong>Client Services<br></strong>We communicate with users on a regular basis to deliver service and address issues. We do in accordance with their wishes and instructions.</p>
 <p><strong>Legal Disclaimer<br></strong>Though we make every effort to preserve users' privacy, we may need to disclose personal information when required by law wherein we have a good-faith belief that such action is necessary to comply with a current or pending judicial proceeding, a court order or legal process served on our website.</p>
-<p><strong>Sharing Personal Information<br></strong>Any information about you, which you give to us, may be used for publication (where you provide details for inclusion in our directories or catalogues and on our websites) and also to supply you with information about our products or services in the form of direct marketing activity by phone, fax or post. This information may also be made available to 3rd parties on a list lease or list rental basis for the purpose of direct marketing. We also reserve the right to disclose details about you to authorised law enforcement agencies where we are asked to do so.</p>
+<p><strong>Sharing Personal Information<br></strong>Any information about you, which you give to us via the website, registration form, attendance to Internet World, attendance to a seminar within Internet World or any other way,&nbsp;may be used for publication (where you provide details for inclusion in our directories or catalogues and on our websites) and also to supply you with information about our products or services in the form of direct marketing activity by phone, fax or post. This information may also be made available to 3rd parties on a list lease or list rental basis for the purpose of direct marketing. We also reserve the right to disclose details about you to authorised law enforcement agencies where we are asked to do so.</p>
 <p><strong>Business Transitions<br></strong>In the event that Ithaca Media Ltd&nbsp; are subjected to a business transition, such as a merger, acquisition by another company, or sale of a portion of its assets, users' personal information will, in most instances, be part of the assets transferred. Users will be notified via prominent notice on our website 30 days prior to a change of ownership or control of their personal information. If, as a result of the business transition, we have reason to believe that the users' personal information is likely to be used in a manner different from that stated at the time of collection they will be given choice consistent with our Notification of Changes section below.</p>
 <p><strong>Links<br></strong>This website contains links to other sites. Please be aware that we, Ithaca Media Ltd are not responsible for the privacy practices of such other sites. This privacy policy applies solely to information collected by this website. <br>Surveys &amp; Contests<br>From time-to-time our site requests information from users via surveys or contests. Participation in these surveys or contests is completely voluntary and the user therefore has a choice whether or not to disclose personal information. In such circumstances, information will be shared with the contest/survey sponsors in order to notify the winners and award prizes. Anonymous survey information will be used for the purposes of monitoring or improving the use and satisfaction of this website. </p>
 <p><strong>Tell-A-Friend<br></strong>If a user elects to use our referral service for informing a friend about our website, we ask them for the friend's name and email address. Ithaca Media Ltd will automatically send the friend a one-time email inviting them to visit the site.</p>
@@ -235,6 +242,7 @@ function newWindow(url) {
 <div class="recSites">
           <ul class="arrow_ul">
             <li class="arrow_li"><a class="lightblue11px" href="http://www.webeventseurope.com">Internet marketing </a></li>
+            <li class="arrow_li"><a class="lightblue11px" href="http://www.contentmanagement365.com">Contentmanagement365 </a></li>
           </ul>
 </div>
 <!-- RECOMMENDED SITES ENDS -->
