--- a/o/or/ore/oregon.gov.html
+++ b/o/or/ore/oregon.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the oregon.gov privacy policy that was archived on 2007-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070613074845id_/http%3A//www.oregon.gov/DAS/EISPD/EGOV/termsconditions.shtml%23Privacy_Statement) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the oregon.gov privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229073712id_/http%3A//www.oregon.gov/DAS/EISPD/EGOV/termsconditions.shtml%23Privacy_Statement) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>E-government Privacy and Terms and Conditions</title>
@@ -108,21 +108,25 @@
 
   <tr valign="top">
     <td align="center" class="agency_menu_td noprint">
-      <script type="text/javascript" src="/menu_files/udm-resources/gnb/udm-custom.js"></script>
-      <script type="text/javascript" src="/menu_files/udm-resources/gnb/udm-control.js"></script>
-      <script type="text/javascript" src="/menu_files/udm-resources/gnb/udm-style.js"></script>
-      <script type="text/javascript" src="/menu_files/udm-resources/gnb/udm-dom.js"></script>
-      <script type="text/javascript" src="/menu_files/udm-resources/gnb/udm-mod-keyboard.js"></script>
 
-      <!-- GNB (Government Navigation Bar) Start -->
-      <div class="gnb_wrapper">
-        <br>
-        <ul id="gnb" class="gnb">
-          <li><a class="nohref">Department</a>
-            <ul>
-              <li><a href="/DAS/index.shtml">Administrative Services Department</a></li>
-              <li><a class="nohref">Divisions</a>
-                <ul>
+<script type="text/javascript" src="/menu_files/udm-resources/gnb/udm-custom.js"></script>
+<script type="text/javascript" src="/menu_files/udm-resources/gnb/udm-control.js"></script>
+<script type="text/javascript" src="/menu_files/udm-resources/gnb/udm-style.js"></script>
+<script type="text/javascript" src="/menu_files/udm-resources/gnb/udm-dom.js"></script>
+<script type="text/javascript" src="/menu_files/udm-resources/gnb/udm-mod-keyboard.js"></script>
+
+<!-- GNB (Government Navigation Bar) Start -->
+<div class="gnb_wrapper">
+   <br>
+   <ul id="gnb" class="gnb">
+
+      <li><a class="nohref">Department</a>
+         <ul> 
+	 
+            <li><a href="/DAS/index.shtml">Administrative Services Department</a></li>
+            <li><a class="nohref">Divisions</a>
+               <ul>
+	
                   <li><a href="/DAS/BAM/index.shtml">Budget and Management Div.</a></li>
                   <li><a href="/DAS/directors.shtml">Director's Office</a></li>
                   <li><a href="/DAS/EISPD/index.shtml">Enterprise Information Strategy and Policy Div.</a></li>
@@ -132,25 +136,31 @@
                   <li><a href="/DAS/SCD/index.shtml">State Controller's Div.</a></li>
                   <li><a href="/DAS/SDC/index.shtml">State Data Center</a></li>
                   <li><a href="/DAS/SSD/index.shtml">State Services Div.</a></li>
-                </ul>
-              </li>
-              <li><a class="nohref">Offices</a>
-                <ul>
-                  <li><a href="/DAS/OHPPR/index.shtml">Office for Oregon Health Policy and Research</a></li>
+               </ul>
+            </li>
+	
+            <li><a class="nohref">Offices</a>
+               <ul>
+	
                   <li><a href="/DAS/OEA/index.shtml">Office of Economic Analysis</a></li>
-                </ul>
-              </li>
-              <li><a class="nohref">Boards</a>
-                <ul>
+               </ul>
+            </li>
+	
+            <li><a class="nohref">Boards</a>
+               <ul>
+	
+                  <li><a href="/DAS/OEBB/index.shtml">Oregon Educators Benefit Board</a></li>
                   <li><a href="/DAS/OPB/index.shtml">Oregon Progress Board</a></li>
                   <li><a href="/DAS/PEBB/index.shtml">Public Employees' Benefit Board</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <!-- GNB (Government Navigation Bar) End -->
+               </ul>
+            </li>
+	
+         </ul>
+      </li>
+   </ul>
+</div>
+<!-- GNB (Government Navigation Bar) End --> 
+
 
 
 
@@ -160,15 +170,15 @@
         <li><a href="/DAS/EISPD/EGOV/search.shtml">Search<br></a></li>
         <li><a href="/DAS/EISPD/EGOV/about_us.shtml">About Us<br></a></li>
         <li><a href="/DAS/EISPD/EGOV/contact_us.shtml">Contact Us<br></a></li>
-        <li><a href="/DAS/EISPD/EGOV/index.shtml">E-government Home<br></a></li>
         <li><a href="/DAS/EISPD/EGOV/index.shtml">___________________<br></a></li>
-        <li><a href="/DAS/EISPD/EGOV/eng_agencies.shtml">Join E-government<br></a></li>
-        <li><a href="/DAS/EISPD/EGOV/ev_internet.shtml">Internet<br></a></li>
-        <li><a href="/DAS/EISPD/EGOV/ff/index.shtml">Forms Factory<br></a></li>
         <li><a href="/DAS/EISPD/EGOV/ecommerce.shtml">E-commerce<br></a></li>
+        <li><a href="/DAS/EISPD/EGOV/ff/index.shtml">Forms Factory<br></a></li>
+        <li><a href="/DAS/EISPD/EGOV/ev_internet.shtml">Internet<br></a></li>
         <li><a href="/DAS/EISPD/EGOV/intranet.shtml">Intranet (GovNet)<br></a></li>
+        <li><a href="/DAS/EISPD/EGOV/eng_agencies.shtml">Join E-government<br></a></li>
         <li><a href="/DAS/EISPD/EGOV/index.shtml">___________________<br></a></li>
-        <li><a href="http://www.oregon.gov/DAS/EISPD/">EISPD Main Page<br></a></li>
+        <li><a href="http://www.oregon.gov/DAS/EISPD/">EISPD Home<br></a></li>
+        <li><a href="/DAS/EISPD/EGOV/index.shtml">E-government Home<br></a></li>
       </ul>
       <!-- /DAS/EISPD/EGOV Left Navigation End -->
 
@@ -470,12 +480,13 @@ A cookie file is a small text file created on your computer by a web site.&nbsp;
         </p>
       </form>
       <p align="left" class="get_adobe">
-        <a href="http://www.adobe.com/products/acrobat/readstep.html" target="_blank"><img src="/images/images_v3/get_adobe_reader.gif" width="88" height="31" border="0" alt="Get Adobe Acrobat Reader" align="left"></a>Adobe Reader is required to view PDF files. Click the "Get Adobe Reader" image to get a free download of the reader from Adobe. Available for Macintosh or Windows.
+        <a href="http://www.adobe.com/products/acrobat/readstep.html" target="_blank"><img src="/images/images_v3/get_adobe_reader.gif" width="88" height="31" border="0" alt="Get Adobe Acrobat Reader" align="left"></a>Adobe Reader is required to view PDF files. Click the "Get Adobe Reader" image to get a free download of the reader from Adobe.
       </p>
     </td>
     <td>&nbsp;</td>
   </tr>
-  <!-- Oregon.gov Footer End --></tbody>
+  <!-- Oregon.gov Footer End -->
+</tbody>
    </table>
   
 
