--- a/v/ve/vel/velocitymicro.com.html
+++ b/v/ve/vel/velocitymicro.com.html
@@ -1,14 +1,14 @@
-<!--The following is the downloaded HTML source of the velocitymicro.com privacy policy that was archived on 2007-05-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070524194732id_/http%3A//velocitymicro.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the velocitymicro.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229084344id_/http%3A//www.velocitymicro.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Statement - High Performance Gaming Computers, Custom Built Home Computers, Business Workstations, Digital Media Computer Systems from Velocity Micro</title>
 <meta name="description" content="Read the privacy statement from Velocity Micro regarding our award winning custom built PCs, computers, gaming computers, business workstations, and digital media systems.">
-<meta name="keywords" content="gaming computers, gaming notebooks, notebooks, laptops, gaming laptops, gaming pc, gaming systems, custom gaming computer, mobile computer, home computer, home pc system, media center computer, business computer, business laptop, business desktop system, business workstation, workgroup servers">
+<meta name="keywords" content="velocity micro,velocity computers,gaming computers,gaming computer,velocity pc,velocity computer,custom computers,velocitymicro,custom pc,gaming pc,micro velocity,custom computer,velocity micro computers,games,gaming laptops,gaming,media center pc,htpc,custom gaming computers,velocitymicro.com,online game,velocity,velocity micro vector gx,velocity micro vector gx campus edition,computers,custom built computers,www.velocitymicro.com,custom gaming pc,velocity micro vector,game,custom built pc,gaming desktops,velocity micro raptor dcx,gaming pcs,custom pcs,notebook computer,velocity micro raptor,velocity micro vector gx desktop computers (budget),umpc,laptop computer,computer gaming,gaming rigs,velocity micro promagix,video game,system,velocity raptor,velocity micro pc,custom gaming computer,computer game">
 <meta name="GOOGLEBOT" content="Index, Follow">
 <meta name="Robots" content="Index, Follow">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link href="/css/styles2006.css" rel="stylesheet" type="text/css">
+<link href="/css/styles2007.css" rel="stylesheet" type="text/css">
 </head>
 
 <body topmargin="0" bottommargin="0" leftmargin="0" rightmargin="0" marginheight="0" marginwidth="0">
@@ -43,8 +43,13 @@ function MM_swapImage() { //v3.0
 }
 //-->
 </script>
-<!-- Deluxe Menu --><noscript><a href=http://deluxe-menu.com/>Javascript Menu by Deluxe-Menu.com</a></noscript>
-    <script type="text/javascript">var dmWorkPath = "../menu2006/vm_menu2006.files/";</script>
+<!-- Deluxe Menu -->
+
+<noscript><a href=http://deluxe-menu.com/>Javascript Menu by Deluxe-Menu.com</a></noscript>
+
+    <!--
+	<script type="text/javascript">var dmWorkPath = "../menu2006/vm_menu2006.files/";</script>
+	-->
     <script type="text/javascript" src="../menu2006/vm_menu2006.files/dmenu.js"></script>
 <!-- (c) 2006, by Deluxe-Menu.com -->
 <table width="745" border="0" align="center" cellpadding="0" cellspacing="0">
@@ -61,7 +66,9 @@ function MM_swapImage() { //v3.0
     <td colspan="6"><table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr>
           <td width="379"><img src="../img/Elements/Nav_Fill.gif" width="379" height="27"></td>
-          <td><script type="text/javascript" src="../menu2006/vm_menu2006.js"></script></td>
+          <td>
+			<script type="text/javascript" src="../menu2006/vm_menu2007.js"></script>
+		  </td>
         </tr>
       </tbody></table></td>
   </tr>
@@ -207,14 +214,14 @@ function MM_swapImage() { //v3.0
   <tbody><tr>
   <td height="32"><img src="../img/Elements/lines_bottom.gif" width="745" height="32"></td>
   </tr>
-  <tr> 
+  <tr>
     <td height="55" background="../img/Elements/ftr_backgrd.gif"><table width="100%" border="0" cellspacing="0" cellpadding="0">
-        <tbody><tr> 
+        <tbody><tr>
           <td width="8"><img src="../img/Elements/spacer_transp.gif" width="1" height="1"></td>
-          <td><font class="ftr">1-800-303-7866 (Hours: 7-11 M-F, 10-10 Sat Eastern)<br>
-            <a class="ftr" href="index.php">Consumer Systems</a> | <a class="ftr" href="index_biz.php">Business 
-            Systems</a> | <!--<a class="ftr" href="sfmusic.php">Solutions</a> | --><a class="ftr" href="sitemap.php">Site 
-            Map</a> | <a class="ftr" href="contactus.php">Contact Us</a> | <a class="ftr" href="privacy.php">Privacy</a> 
+          <td><font class="ftr">1-800-303-7866 (Hours: 7-11 M-F, 10-6 Sat Eastern)<br>
+            <a class="ftr" href="index.php">Consumer Systems</a> | <a class="ftr" href="index_biz.php">Business
+            Systems</a> | <!--<a class="ftr" href="sfmusic.php">Solutions</a> | --><a class="ftr" href="sitemap.php">Site
+            Map</a> | <a class="ftr" href="contactus.php">Contact Us</a> | <a class="ftr" href="privacy.php">Privacy</a>
             | <a class="ftr" href="terms.php">Terms and Conditions</a> | <a class="ftr" href="jobs.php">Jobs</a> | <a class="ftr" href="newsletter.php">Newsletter</a><br>
             ©1998-2007 Velocity Micro, Inc. All rights reserved</font></td>
         </tr>
@@ -223,10 +230,16 @@ function MM_swapImage() { //v3.0
 </tbody></table>
 <!-- BEGIN HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG -->
 <script language="javascript" src="http://server.iad.liveperson.net/hc/76931915/x.js?cmd=file&amp;file=chatScript3&amp;site=76931915&amp;category=en;woman;2"></script>
-<!-- END HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG --></td>
+<!-- END HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG -->
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-3192977-1";
+urchinTracker();
+</script></td>
         </tr>
       </tbody></table></td>
-    <td background="img/Elements/BG_Right.gif">&nbsp;</td>
+    <td class="right">&nbsp;</td>
   </tr>
 </tbody></table>
 
