--- a/q/qu/quo/quotemountain.com.html
+++ b/q/qu/quo/quotemountain.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the quotemountain.com privacy policy that was archived on 2007-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070616045639id_/http%3A//www.quotemountain.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the quotemountain.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229091744id_/http%3A//www.quotemountain.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
   <title>Famous Quotes Quotations Sayings Proverbs - QuoteMountain Famous Quotes</title>
@@ -80,7 +80,7 @@ width=728 height=90 border=1></a></noscript>
           
     </td>
     <td id="hsp" align="right">
-      <font size="-2">June 15, 2007&nbsp;&nbsp;</font>
+      <font size="-2">December 29, 2007&nbsp;&nbsp;</font>
     </td>
   </tr>
 </tbody></table>
@@ -485,7 +485,7 @@ width=728 height=90 border=1></a></noscript>
             dc.write('<ifr'+'ame src="http://as'+host+'s?s=57513&u='+uu+'&f=3&id='+r+wh+fr);
             dc.write('<a hr'+'ef="http://c'+host+'c?s=57513&f=3&id='+r+'" target="_blank">');
             dc.write('<i'+'mg src="http://as'+host+'s?s=57513&u='+uu+'&f=3&id='+r+'&if=0'+wh+'border="0"></a></ifr'+'ame>');
-            //--></script><iframe src="http://as.casalemedia.com/s?s=57513&amp;u=https%3A//web.archive.org/web/20070616045639id_/http%253A//www.quotemountain.com/privacy.php&amp;f=3&amp;id=3510607248.598349" width="120" height="600" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no"><a href="http://c.casalemedia.com/c?s=57513&f=3&id=3510607248.598349" target="_blank"><img src="http://as.casalemedia.com/s?s=57513&u=https%3A//web.archive.org/web/20070616045639id_/http%253A//www.quotemountain.com/privacy.php&f=3&id=3510607248.598349&if=0" width="120" height="600" border="0"></a></iframe><noscript><iframe src="http://as.casalemedia.com/s?s=57513&u=http%3A%2F%2FQuoteMountain.com&f=3&id=1"
+            //--></script><iframe src="http://as.casalemedia.com/s?s=57513&amp;u=https%3A//web.archive.org/web/20071229091744id_/http%253A//www.quotemountain.com/privacy.php&amp;f=3&amp;id=3510606298.3653092" width="120" height="600" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no"><a href="http://c.casalemedia.com/c?s=57513&f=3&id=3510606298.3653092" target="_blank"><img src="http://as.casalemedia.com/s?s=57513&u=https%3A//web.archive.org/web/20071229091744id_/http%253A//www.quotemountain.com/privacy.php&f=3&id=3510606298.3653092&if=0" width="120" height="600" border="0"></a></iframe><noscript><iframe src="http://as.casalemedia.com/s?s=57513&u=http%3A%2F%2FQuoteMountain.com&f=3&id=1"
             width="120" height="600" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no"><a
             href="http://c.casalemedia.com/c?s=57513&f=3&id=0" target="_blank"><img
             src="http://as.casalemedia.com/s?s=57513&u=http%3A%2F%2FQuoteMountain.com&f=3&id=0&if=0" width="120"
